--- a/testing.html
+++ b/testing.html
@@ -27,11 +27,15 @@
         console.log('Response received:', response.body);
         
         if (data.launch_url) {
-          window.location.href = data.launch_url;
-        } else {
+          if (window.top !== window.self) {
+             window.top.location = data.launch_url;
+          }
+        }
+          else {
           alert('launch_url not found in response');
         }
-      } catch (error) {
+     }
+     catch (error) {
         console.error('Error:', error);
         alert('An error occurred. See console for details.');
       }
